--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -17,7 +17,7 @@ image::03-l-original.png[link=self]
 [verse]
 ____
 NC. 438i                         
-                         pr. inlen 2 Art. 1841
+                         pr. inlen 2 Oct. 1841
 
                 Durchlauchtigster Fürst,
                 Gnädigst regierender Fürst
