--- a/modules/689/pages/service-slip.adoc
+++ b/modules/689/pages/service-slip.adoc
@@ -11,7 +11,11 @@ Möller, Amtsdiener, and refers to the insinuation (formal service) of the “gl
 standard fee-book abbreviations for decree/dispatch/notification at the Amt. They’re the costs of preparing and
 serving that notice, typically chargeable to the party.
 
-//[literal,subs="verbatim,quotes"]
+[cols="1l,1l",frame=none,grid=none]
+|===
+|Transliteration|Translation
+
+|
 ....
 Colon Krückeberg N 10 in
 Berenbusch
@@ -27,7 +31,7 @@ Insinuirt den 27ten July 1841
 Möller Amtsdiener
 ....
 
-[literal,subs="verbatim,quotes"]
+|
 ....
 Tenant farmer Krückeberg N 10 in
 Berenbusch
@@ -40,4 +44,4 @@ Fr_______________4
 The identically worded counterpart of the notice 
 was formally served on 27 July 1841.
 ....
-
+|===
