--- a/modules/689/pages/service-slip.adoc
+++ b/modules/689/pages/service-slip.adoc
@@ -11,12 +11,11 @@ Möller, Amtsdiener, and refers to the insinuation (formal service) of the “gl
 standard fee-book abbreviations for decree/dispatch/notification at the Amt. They’re the costs of preparing and
 serving that notice, typically chargeable to the party.
 
-[cols="1a,1a",frame=none,grid=none]
+[cols="1l,1l",frame=none,grid=none]
 |===
 |Transliteration|Translation
 
 |
-....
 Colon Krückeberg N 10 in
 Berenbusch
 Decr_____________6                                                           
@@ -29,10 +28,8 @@ Fr_______________4
 Das Gleichlautner gegen Bescheid ist
 Insinuirt den 27ten July 1841
 Möller Amtsdiener
-....
 
 |
-....
 Tenant farmer Krückeberg N 10 in
 Berenbusch
 Decr_____________6                                                           
@@ -43,5 +40,4 @@ Fr_______________4
                 22
 The identically worded counterpart of the notice 
 was formally served on 27 July 1841.
-....
 |===
