--- a/modules/689/pages/doc-03.adoc
+++ b/modules/689/pages/doc-03.adoc
@@ -3,9 +3,9 @@
 
 [cols="1a,1a",frame=none,grid=none]
 |===
-image::08-r.png[scale=50,link=self]
+|image::08-r.png[scale=50,link=self]
 
-image::09-l.png[scale=50,link=self]
+|image::09-l.png[scale=50,link=self]
 |===
 
 [literal,subs="verbatim,quotes"]
