--- a/modules/689/pages/doc-03.adoc
+++ b/modules/689/pages/doc-03.adoc
@@ -78,6 +78,10 @@ progg[protokollieren].
 ....
 NC. 5038          presented in the Chamber 12 Nov. [18]41
 
+[Fiscal oval hand-stamp]
+FÜRSTL: SCHAUMBG: LIPPE: STEMPEL-TAXE
+3 Gr.
+
 
    Most Serene Prince, Gracious reigning Prince and Lord!
 
