--- a/modules/689/pages/doc-03.adoc
+++ b/modules/689/pages/doc-03.adoc
@@ -11,11 +11,11 @@
 [role="section-narrow"]
 == Overview
 
-The document was drafted by *G. W. Fuchs*, on November 11, 1841, on behalf of Johann Heinrich Krückeberg, No. 10 
-Berenbush. You can see this at the foot of page 2, where *Conc.: G. W. Fuchs”* = drafted by the clerk G. W. Fuchs.
-Fuchs was likely a *Kanzlei-Schreiber (Concipist) at the Amt Bückeburg* or a local office scribe who drafted petitions
-for residents. *Colon Krückeberg* appears opposite of "GW Fuchs" beneath the closing valediction *unterhängster* (
-*your most humble [petitioner/servant]*).
+The document was drafted by *G. W. Fuchs*, on November 11, 1841, on behalf of Johann Heinrich Krückeberg, No. 10
+Berenbush. You can see this at the foot of page 2, where "*Conc.: G. W. Fuchs”* means "drafted by the clerk G. W.
+Fuchs".  Fuchs was likely a *Kanzlei-Schreiber (Concipist) at the Amt Bückeburg* or a local office scribe who
+drafted petitions for residents. *Colon Krückeberg* appears opposite of "GW Fuchs" beneath the closing valediction
+*unterhängster* (*your most humble [petitioner/servant]*).
 
 It was presented before the Rentcammer the next day, November 12, 1841, when it assigned the registry number of
 5038. And the *large margin note "R. C. Seite 3."* was added. It's a cross-reference to a separate book kept by the
