--- a/modules/689/pages/doc-03.adoc
+++ b/modules/689/pages/doc-03.adoc
@@ -17,7 +17,7 @@ Fuchs".  Fuchs was likely a *Kanzlei-Schreiber (Concipist) at the Amt Bückeburg
 drafted petitions for residents. *Colon Krückeberg* appears opposite of "GW Fuchs" beneath the closing valediction
 *unterhängster* (*your most humble [petitioner/servant]*).
 
-It was presented before the Rentcammer the next day, November 12, 1841, when it assigned the registry number of
+The petition was presented before the Rentcammer the next day, November 12, 1841, when it assigned the registry number of
 5038. And the *large margin note "R. C. Seite 3."* was added. It's a cross-reference to a separate book kept by the
 Rentkammer—typically called the *Journal/Manual/Protocol of the Rentkammer* (also Eingangs-Journal, Register der Eingaben,
 or simply Protocoll). Every incoming petition got a short entry there (date, sender, subject, fees), often grouped by
