--- a/modules/689/pages/doc-03.adoc
+++ b/modules/689/pages/doc-03.adoc
@@ -136,7 +136,7 @@ humbly as possible: to graciously approve the necessary
 loan of 200 rt from the Chamber Treasury against a
 legal obligation.
 
-Dying in deepest reverence,
+With deepest respect,
 
                                  Your Serene Highness
 
