--- a/modules/689/pages/doc-03-a.adoc
+++ b/modules/689/pages/doc-03-a.adoc
@@ -29,7 +29,7 @@ ich ein solches doch nicht bevor-
 worten d kaum daher die
 Bewilligung oder verweigerung
 lediglich dem Ermessen der Cam-
-ner anheimgeben.
+mer anheimgeben.
 Bbg 15. Novbr 41.
               Ricke
 
