--- a/modules/689/pages/doc-03-a.adoc
+++ b/modules/689/pages/doc-03-a.adoc
@@ -31,10 +31,10 @@ Bewilligung oder verweigerung
 lediglich dem Ermessen der Cam-
 mer anheimgeben.
 Bbg 15. Novbr 41.
-              Ricke
+              [Ricke/Reitz]
 
 KC. das Gesuch wäre
 abzuschlagen.
 36 g. 15. Nov. 41.
- Reck     Vat
+        [Ricke/Reitz]    vot[um]
 ....
