--- a/modules/689/pages/doc-03-a.adoc
+++ b/modules/689/pages/doc-03-a.adoc
@@ -57,22 +57,33 @@ Cadastral value of the buildings ____ 525 rt
 less debts _________________________ 700 -
                     remaining value 825 rt
 
-Should the homestead come up for sale, it would still
-remain a question whether, after settling the
-liabilities, the requested loan of 200 rt would be
-covered. Although it cannot be denied that loans have
-already been granted under even more precarious
-circumstances, I cannot advocate for such a loan and
-will therefore hardly leave the approval or rejection
-to the sole discretion of the Chamber.
 
-Bückeburg, November 15, '41.
+Should the holding come up for sale, the question would still arise
+whether, after deducting the encumbrances, the requested loan of
+200 thalers would be covered. Although it cannot be denied that
+loans have already been granted under still more unfavorable
+conditions, I cannot recommend such a loan here and therefore
+leave approval or refusal entirely to the discretion of the Chamber.
+Bbg., 15 Nov. 1841.
+
 [Ricke/Reitz]
 
 KC. The petition should be rejected.
-36 g. November 15, '41.
-[Ricke/Reitz] vot.
+
+[Ricke/Reitz] vot[um]
 ....
 |===
+
+
+."holding" and "vot." Explained
+****
+[NOTE]
+====
+* *"holding"* is translated from "Stelle" (and elsewhere "Stätte"). It refers to the "leasehold farm
+holding of a numbered Colon (tenant farmer), comprising land and buildings."
+* *vot.* is short of votum and means the  Clerk’s/official’s written **opinion orrecommendation** submitted to the
+Chamber. It is not a vote tally.
+====
+****
 
 
