--- a/modules/689/pages/doc-02.adoc
+++ b/modules/689/pages/doc-02.adoc
@@ -1,4 +1,4 @@
-= Amt Report to the Rentkammer — 7 Oct 1841 (Doc 2)
+=  Document 2: Amt Report to the Rentkammer — 7 Oct 1841
 :page-role: wide
 
 image::04-r-original.png[link=self]
