--- a/modules/689/pages/doc-03-a.adoc
+++ b/modules/689/pages/doc-03-a.adoc
@@ -1,6 +1,7 @@
 = Sale Risk and Loan Coverage: Clerk’s Opinion on Krückeberg’s Holding — 15 Nov 1841
 :page-role: wide
 
+== Test
 image::09-r.png[scale=75,link=self]
 
 [role="narrow-section"]
