--- a/modules/689/pages/doc-03-a.adoc
+++ b/modules/689/pages/doc-03-a.adoc
@@ -27,10 +27,10 @@ Die Stelle des Krückeberg besteht
 
 aus 10 Morgen a 100 rt_______1000 rt
 Catasterwerth der Gebäude_____525 rt
-
-                            1525 rt [total]
-davon ab Schulden.___________700 -
-               bleibt Werth  825 rt
+                           _________   
+                             1525 rt [total]
+davon ab Schulden.____________700 -
+               bleibt Werth   825 rt
 
 
 Sollte die Stelle zum Verkauf kommen,
@@ -61,11 +61,10 @@ Bbg 15. Nov. 41.
 ....
 10 Morgen at 100 rt each ___________ 1000 rt
 Cadastral value of the buildings ____ 525 rt
-
-                                   1525 rt
-                        --------------------
-less debts _________________________ 700 -
-                    remaining value 825 rt
+                                ____________
+                                      1525 rt
+less debts ___________________________ 700 -
+                    remaining value    825 rt
 
 
 Should the holding come up for sale, the question would still arise
