--- a/modules/689/pages/doc-03-a.adoc
+++ b/modules/689/pages/doc-03-a.adoc
@@ -71,6 +71,8 @@ Bbg 15. Nov. 41.
 
 |
 ....
+The holding of Krückeberg consists of
+
 10 Morgen at 100 rt each ___________ 1000 rt
 Cadastral value of the buildings ____ 525 rt
                                 ____________
