--- a/modules/689/pages/doc-03-a.adoc
+++ b/modules/689/pages/doc-03-a.adoc
@@ -23,7 +23,7 @@ forced sale stayed very real.
 ====
 * *"holding"* is translated from "Stelle" (and elsewhere "Stätte"). It refers to the "leasehold farm
 holding of a numbered Colon (tenant farmer), comprising land and buildings."
-* *vot.* is short of votum and means the  Clerk’s/official’s written **opinion orrecommendation** submitted to the
+* *vot.* is short of votum and means the  Clerk’s/official’s written **opinion, his recommendation,** submitted to the
 Chamber. It is not a vote tally.
 ====
 ****
