--- a/modules/689/pages/doc-01i.adoc
+++ b/modules/689/pages/doc-01i.adoc
@@ -1,8 +1,12 @@
 = Document 1i: Decree Against Krückeberg - 13 July 1841
 :page-role: wide
 
-image::03-r.png[link=self]
-image::04-l.png[link=self]
+[options="noheader",cols="1a,1a",frame=none,grid=none]
+|===
+|image::03-r.png[title="Click to Enlarge",scale=50,link=self]
+                                                              
+|image::04-l.png[title="Click to Enlarge",scale=50,link=self]
+|===
 
 == Transliteration and Translation
 
