--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -3,7 +3,7 @@
 
 [cols="1a,1a",frame=none,grid=none,options="noheader"]
 |===
-|image::02-r.png[scale=50link=self]
+|image::02-r.png[scale=50,link=self]
 
 |image::03-l-original.png[scale=50,link=self]
 |===
