--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -8,6 +8,7 @@
 |image::03-l-original.png[scale=50,link=self]
 |===
 
+[role="section-narrow"]
 == Overview
 
 On *2 October 1841* in Bückeburg, *Johann Heinrich Krückeberg* (Colon No. 10, Berenbusch) petitions the
