--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -11,16 +11,15 @@
 [role="section-narrow"]
 == Overview
 
-On *2 October 1841* in Bückeburg, *Johann Heinrich Krückeberg* (Colon No. 10, Berenbusch) petitions the
-*Princely Rentkammer*. He explains that his late parents—his father a shoemaker and his mother who continued the
-trade—ran up a substantial *leather debt* with *Hempel & Söhne (Minden)*. That debt, with *interest*, has
-been *judged against him*, and, as an attached Amt notice shows, he now faces *distraint*. Unable to pay the
-whole amount from his own means, he *begs leave to borrow 150 Reichsthaler* and to *amortize the remaining,
-unconsolidated portion* of Hempel’s claim in *annual installments of 5 thalers*. He acknowledges his holding
-already carries *700 thalers of consented debts*, but says he has no other way out despite the heavier interest
-burden. The petition closes with the standard deferential formula. Marginal dockets route the matter to the Amt for
-a report (noted *4 Oct 1841*) and register it under *N.C. 438 i*; the drafting note *“Conc. G. W. Fuchs”*
-shows it was written up by clerk *G. W. Fuchs*.
+On *2 October 1841* in Bückeburg, *Johann Heinrich Krückeberg* (Colon No. 10, Berenbusch) submits a *petition
+to the Princely Rentkammer*. He explains that his late parents’ shoemaking business left a *large leather debt*
+to *Hempel & Söhne (Minden)*; judgment has now been entered against him and he faces *distraint*. Unable to pay
+in full, he asks the Chamber to *consent to a new loan of 150 Reichsthaler* and to allow him to *pay the
+remaining (unconsolidated) balance in annual installments of 5 thalers*. He notes his holding already carries
+*700 thalers in consented debts*, but says he has no other way out despite the added interest burden. The
+petition closes with the standard deferential formula. Marginal dockets route the matter *to the Amt for a
+report* (noted *4 Oct 1841*) and show it was *drafted by G. W. Fuchs (Conc.)* and registered under *N. C. 438
+i*.
 
 == Transliteration and Translation
 
