--- a/modules/689/pages/overview.adoc
+++ b/modules/689/pages/overview.adoc
@@ -1,7 +1,8 @@
 
 TODO:
-
-* Summarize the 13 July 1841 Rentcammer Decree here briefly.
+* Rewrite the Chatpgpt summary below and mention that Krückeberg had been the one to appeal and then to petition and this
+had incurred more legal costs.
+* Summarize the 13 July 1841 Rentcammer Decree aginst Johann Heinrich here briefly.
 * Summarize and mention that the debt owed to Hempel and Sons originated with Jobst Heinrich (1765-1822) and give
 a brief biography of him and his wife.
 * Create A
