--- a/modules/689/nav.adoc
+++ b/modules/689/nav.adoc
@@ -2,7 +2,7 @@
 //NLA BU, K 2, A Nr. 689
 * xref:cover.adoc[]
 * xref:doc-index.adoc[]
-* xref:doc-01i.adoc[]
+* xref:doc-d1.adoc[]
 * xref:service-slip-july-10-1841.adoc[]
 * xref:doc-01.adoc[]
 * xref:doc-02.adoc[]
