--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -81,10 +81,8 @@ Ew. Durchlaucht
 
 
                            unterthänigster,
-Buckeburg
-                           Colen Krückeberg
-d. 2ten Ditto. 1841.
-                           Nr 10 in Berenbusch.
+Buckeburg                  Colen Krückeberg
+d. 2ten Ditto. 1841.       Nr 10 in Berenbusch.
 Conc. GWFuchs.
 Nro g d.
 ....
