--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -138,11 +138,9 @@ Remaing in the deepest reverence,
 Your Serene Highness’s
 
                               most humble servant,
-Bückeburg
-                              Colon Krückeberg
-2 October 1841
-                              No. 10 in Berenbusch
-drafted by G. W. Fuchs
+Bückeburg                     Colon Krückeberg
+2 October 1841                No. 10 in Berenbusch
+drafted by G. W. Fuchs                             
 with fee
 ____
 |===
