--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -137,9 +137,12 @@ Remaing in the deepest reverence,
 
 Your Serene Highness’s
 
-                                 most humble servant,
-Bückeburg                      Colon Krückeberg
-2 October 1841                No. 10 in Berenbusch
+most humble servant,
+Colon Krückeberg
+No. 10 in Berenbusch
+                              
+Bückeburg                     
+2 October 1841                
 drafted by G. W. Fuchs                             
 with fee
 ____
