--- a/modules/689/pages/doc-d1.adoc
+++ b/modules/689/pages/doc-d1.adoc
@@ -1,4 +1,4 @@
-= Document D1: Decree Against Krückeberg - 13 July 1841
+= Document D1: Amt Decree Against Krückeberg and Execution Order - 10/13 July 1841
 :page-role: wide
 :doc-id: doc-01i
 :place: Bückeburg
