--- a/modules/689/pages/doc-d1.adoc
+++ b/modules/689/pages/doc-d1.adoc
@@ -114,16 +114,12 @@ Colon Krückeberg, No. 10 in Berenbusch, Defendant,
                  Remaining principal and
                  interest.
 
-Advocate Meÿer, attorney for the
-plaintiffs, respectfully requests that,
-since the defendant Krückeberg has still
-not, as ordered by decree of 29 May and
-6 June of this year, paid the sum of
-133 Reichsthaler [Rthlr struck through] 7 Mariengroschen
-together with 5 percent interest from
-9 April 1833, the threatened
-execution be carried out,
-under threat of distraint
+Advocate Meÿer, attorney for the plaintiffs, respectfully
+requests that, since the defendant Krückeberg has still not, as
+ordered by decree of 29 May and 6 June of this year, paid the sum
+of 133 Reichsthaler [Rthlr struck through] 7 Mariengroschen
+together with 5 percent interest from 9 April 1833, the
+threatened execution be carried out, under threat of distraint
 (the legal seizure of property to compel payment).
 
 To be decided – referred, expedited, for default:
@@ -133,20 +129,16 @@ in good faith.
 
 Decree
 
-The above decision is to be communicated
-to the defendant in copy, and execution is
-now ordered. The court officer Möller is
-directed to execute against the defendant
-for the principal sum of 133 Reichsthaler
-[Rthlr struck through] 7 Mariengroschen and interest
-from 9 April 1833 at 5 percent, with a
-fee of 4 Mariengroschen, and to inform him
-that if the execution proves unsuccessful
-and if no payment is made within
-14 days, then upon further request by
-the plaintiffs, distraint
-(the legal seizure of property to compel payment)
-will be ordered and carried out immediately.
+The above decision is to be communicated to the defendant in
+copy, and execution is now ordered. The court officer Möller is
+directed to execute against the defendant for the principal sum
+of 133 Reichsthaler [Rthlr struck through] 7 Mariengroschen and
+interest from 9 April 1833 at 5 percent, with a fee of 4
+Mariengroschen, and to inform him that if the execution proves
+unsuccessful and if no payment is made within 14 days, then upon
+further request by the plaintiffs, distraint (the legal seizure
+of property to compel payment) will be ordered and carried out
+immediately.
 
 Decree: Bückeburg, 13 July 1841
 Fürstlich Schaumburg-Lippe Amt
