--- a/modules/689/pages/doc-d1.adoc
+++ b/modules/689/pages/doc-d1.adoc
@@ -36,6 +36,8 @@ not pay.
 
 == Transliteration and Translation
 
+NOTE: *distraint* in the text below means the legal seizure of property to compel payment.
+
 [cols="1a,1a"]
 |===
 |Transliteration|Translation
@@ -136,9 +138,8 @@ of 133 Reichsthaler [Rthlr struck through] 7 Mariengroschen and
 interest from 9 April 1833 at 5 percent, with a fee of 4
 Mariengroschen, and to inform him that if the execution proves
 unsuccessful and if no payment is made within 14 days, then upon
-further request by the plaintiffs, distraint (the legal seizure
-of property to compel payment) will be ordered and carried out
-immediately.
+further request by the plaintiffs, distraint  will be ordered and
+carried out immediately.
 
 Decree: Bückeburg, 13 July 1841
 Fürstlich Schaumburg-Lippe Amt
