--- a/modules/689/pages/doc-d1.adoc
+++ b/modules/689/pages/doc-d1.adoc
@@ -121,8 +121,7 @@ requests that, since the defendant Krückeberg has still not, as
 ordered by decree of 29 May and 6 June of this year, paid the sum
 of 133 Reichsthaler [Rthlr struck through] 7 Mariengroschen
 together with 5 percent interest from 9 April 1833, the
-threatened execution be carried out, under threat of distraint
-(the legal seizure of property to compel payment).
+threatened execution be carried out, under threat of *distraint*.
 
 To be decided – referred, expedited, for default:
 in good faith.
